// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Title > should render as h1 element 1`] = `
.circuit-0 {
  font-weight: 700;
  color: var(--cui-fg-normal);
  letter-spacing: -0.03em;
  font-size: 7.5rem;
  line-height: 7.5rem;
}

<h1
  class="circuit-0"
>
  h1 Title
</h1>
`;

exports[`Title > should render as h2 element 1`] = `
.circuit-0 {
  font-weight: 700;
  color: var(--cui-fg-normal);
  letter-spacing: -0.03em;
  font-size: 7.5rem;
  line-height: 7.5rem;
}

<h2
  class="circuit-0"
>
  h2 Title
</h2>
`;

exports[`Title > should render as h3 element 1`] = `
.circuit-0 {
  font-weight: 700;
  color: var(--cui-fg-normal);
  letter-spacing: -0.03em;
  font-size: 7.5rem;
  line-height: 7.5rem;
}

<h3
  class="circuit-0"
>
  h3 Title
</h3>
`;

exports[`Title > should render as h4 element 1`] = `
.circuit-0 {
  font-weight: 700;
  color: var(--cui-fg-normal);
  letter-spacing: -0.03em;
  font-size: 7.5rem;
  line-height: 7.5rem;
}

<h4
  class="circuit-0"
>
  h4 Title
</h4>
`;

exports[`Title > should render as h5 element 1`] = `
.circuit-0 {
  font-weight: 700;
  color: var(--cui-fg-normal);
  letter-spacing: -0.03em;
  font-size: 7.5rem;
  line-height: 7.5rem;
}

<h5
  class="circuit-0"
>
  h5 Title
</h5>
`;

exports[`Title > should render as h6 element 1`] = `
.circuit-0 {
  font-weight: 700;
  color: var(--cui-fg-normal);
  letter-spacing: -0.03em;
  font-size: 7.5rem;
  line-height: 7.5rem;
}

<h6
  class="circuit-0"
>
  h6 Title
</h6>
`;

exports[`Title > should render with size four 1`] = `
.circuit-0 {
  font-weight: 700;
  color: var(--cui-fg-normal);
  letter-spacing: -0.03em;
  font-size: 3.5rem;
  line-height: 3.5rem;
}

<h2
  class="circuit-0"
>
  four Title
</h2>
`;

exports[`Title > should render with size one 1`] = `
.circuit-0 {
  font-weight: 700;
  color: var(--cui-fg-normal);
  letter-spacing: -0.03em;
  font-size: 7.5rem;
  line-height: 7.5rem;
}

<h2
  class="circuit-0"
>
  one Title
</h2>
`;

exports[`Title > should render with size three 1`] = `
.circuit-0 {
  font-weight: 700;
  color: var(--cui-fg-normal);
  letter-spacing: -0.03em;
  font-size: 4rem;
  line-height: 4rem;
}

<h2
  class="circuit-0"
>
  three Title
</h2>
`;

exports[`Title > should render with size two 1`] = `
.circuit-0 {
  font-weight: 700;
  color: var(--cui-fg-normal);
  letter-spacing: -0.03em;
  font-size: 6rem;
  line-height: 6rem;
}

<h2
  class="circuit-0"
>
  two Title
</h2>
`;
